Fix hover navigation bar overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6128,6 +6128,10 @@ readers do not read off random characters that represent icons */
   font-weight: 900;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /*!
  * Bootstrap v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
