--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 //custom button colors
 $primary: #4183d7;
 $secondary: #999aa2;
